--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,52 +10,28 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
-
-        <style>
-            .jumbotron {
-                margin: 0px auto;
-                background-color: rgb(25, 7, 7);
-            }
-            .team-post{
-                text-align: center;
-                font-size: medium;
-            }
-            .team-names{
-                margin-top: 10%;
-            }
-            .card{
-                background-color: #1B1B1B;
-                color: white;
-                box-shadow: 0 4px 8px 0 rgba(78, 78, 78, 0.875);
-            }
-            .centered{
-                position: absolute;  
-                word-spacing: 30px;
-                color: #5a46b2c9;
-                top: 40%;
-                left: 30%;
-            }
-            .row-content{
-                border: none;
-            }
-            
-        </style>
+        <link rel="stylesheet" href="aboutus.css">
     </head>
     <body>
         <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand mr-auto" href="#" style="margin-left: 3%;"><img src="./img/ppt logo.png" height="60" width="60"></a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
-                </ul>
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <audio id="audio" style="z-index: 0;">
+                    <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
+                </audio>
+                <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+                <div class="collapse navbar-collapse" id="Navbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
         
@@ -97,7 +73,7 @@
                     <div class="card col-md-10 offset-1" style="margin-top: 10%;">
                         <div class="card-body">
                             <div>
-                                <img class="col-12 team-img" src="img/team-img/team-photo0.jpg" height="100%" alt="">
+                                <img class="col-12 team-img" src="img/team-img/team-photo0.webp" height="100%" alt="">
                             </div>
                             <h4 class="team-names" style="text-align: center;">Rtr. Sifra Biju</h4>
                             <p class="team-post">Immediate Past President</p>
@@ -109,7 +85,7 @@
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
                             <div class="col-12 team-img">
-                                <img class="col-12" src="img/team-img/team-photo1.jpg" height="100%" alt="">
+                                <img class="col-12" src="img/team-img/team-photo1.webp" height="100%" alt="">
                             </div>
                             <h4 class="team-names" style="text-align: center;">Rtr. Mathew Lobo</h4>
                             <p class="team-post">President</p>
@@ -119,7 +95,9 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo2.jpg" height="220px" alt="">
+                            <div class="col-12 team-img">
+                                <img class="col-12" src="img/team-img/team-photo2.webp" height="100%" alt="">
+                            </div>
                             <h4 class="team-names" style="text-align: center;">Rtr. Resham Patil</h4>
                             <p class="team-post">Vice President</p>
                         </div>
@@ -128,7 +106,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo3.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo3.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Ronit Jhaveri</h4>
                             <p class="team-post">Secretary</p>
                         </div>
@@ -137,7 +115,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo4.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo4.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Jinish Varaiya</h4>
                             <p class="team-post">Jt. Secretary & Tech. Head</p>
                         </div>
@@ -146,7 +124,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo5.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo5.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Sakshee Patil</h4>
                             <p class="team-post">Mktg. Head & Sgt. At Arms</p>
                         </div>
@@ -155,7 +133,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo6.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo6.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Kavach Dave</h4>
                             <p class="team-post">Public Relations Head</p>
                         </div>
@@ -164,7 +142,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo7.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo7.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Siddhi More</h4>
                             <p class="team-post">Digital Communications Head</p>
                         </div>
@@ -173,7 +151,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo8.jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo8.webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Wesley Lewis</h4>
                             <p class="team-post">Treasurer</p>
                         </div>
@@ -183,7 +161,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo1(3).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo1(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Suraj Bhatia</h4>
                             <p class="team-post">Club Service Director</p>
                         </div>
@@ -192,7 +170,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo2(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo2(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Meetali Bhole</h4>
                             <p class="team-post">Community Service Director</p>
                         </div>
@@ -201,7 +179,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo3(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo3(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Max Gonsalves</h4>
                             <p class="team-post">Marketing Director</p>
                         </div>
@@ -210,7 +188,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo4(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo4(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Lavisha J.
                             </h4>
                             <p class="team-post">Public Relations Director</p>
@@ -220,7 +198,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo5(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo5(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Ashwin Shukla</h4>
                             <p class="team-post">Pro. Development Director</p>
                         </div>
@@ -229,7 +207,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo6(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo6(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Harshil Saini</h4>
                             <p class="team-post">International Service Director</p>
                         </div>
@@ -238,7 +216,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/trsm-photo7(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/trsm-photo7(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Yash Waghmare</h4>
                             <p class="team-post">Digi. Communications Director</p>
                         </div>
@@ -247,7 +225,7 @@
                 <div class="col-12 col-md-3">
                     <div class="card" style="margin-top: 10%;">
                         <div class="card-body">
-                            <img class="col-12 team-img" src="img/team-img/team-photo8(2).jpg" height="220px" alt="">
+                            <img class="col-12 team-img" src="img/team-img/team-photo8(2).webp" height="100%" alt="">
                             <h4 class="team-names" style="text-align: center;">Rtr. Aadi Gavankar</h4>
                             <p class="team-post">Task Force Director</p>
                         </div>
@@ -289,6 +267,7 @@
                     </div>
                     <div class="col-12 col-sm-4 align-self-center">
                         <div class="text-center">
+                            Let's Connect:<br><br>
                             <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
                             <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
                                     class="fa fa-facebook"></i></a>
@@ -303,15 +282,13 @@
             <br>
             <div class="footer-bottom">
                 <div class="col-auto">
-                    <p>© Copyright <span style="color: maroon; font-weight:bold;">Rotaract Club of CRCE 2022-23</span>. designed by <span style="color: maroon; font-weight:bold;">Rtr. Jinish Varaiya</span></p>
+                    <p style="font-size:large;"> Developed By <span><a style="color: maroon; font-weight:bold; text-decoration: none;" href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span></p>
                 </div>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script>
-            var w = window.innerWidth;
-            var h = window.innerHeight;
-            console.log(w,h);
-        </script>
+        <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
