--- a/ContactUs.html
+++ b/ContactUs.html
@@ -20,19 +20,24 @@
     </head>
     <body>
         <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand mr-auto" href="#" style="margin-left: 3%;"><img src="./img/ppt logo.png" height="60" width="60"></a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item "><a class="nav-link" href="./index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
-                </ul>
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <audio id="audio" style="z-index: 0;">
+                    <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
+                </audio>
+                <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+                <div class="collapse navbar-collapse" id="Navbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
@@ -43,7 +48,7 @@
                 </div>
                 <div class="row row-content">
                     <div class="col-12 col-sm-6">
-                        <h5 style="text-align: center;">Map of our Location</h5>
+                        <h4 style="text-align: center; font-weight: bold;"><img src="img/contactus/location.svg" alt=""> Find Us</h4>
                         <iframe
                             style="border: 2px black; width: 100%; height: 270px"
                             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7542.58353090316!2d72.8171557!3d19.0509054!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9410830616d%3A0x111b63353dbbce01!2sFr.%20Conceicao%20Rodrigues%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1601012404908!5m2!1sen!2sin"
@@ -54,11 +59,11 @@
                     <div class="col-12 col-sm-6" >
                         <div class="row justify-content-center">
                             <div class="col-11 col-sm-6">
-                                <h5>Our Address</h5>
+                                <h4 style="font-weight: bold;">Our Address</h4>
                                 <address style="font-size: 100%;">
                                     Fr. Agnel Ashram, Bandstand<br>
                                     Bandra (W), Mumbai 400050.<br>
-                                    MH, IN<br>
+                                    MH, IN.<br>
                                     <i class="fa fa-phone"></i>: +91 9137835037/ 7798800444<br>
                                     <i class="fa fa-envelope"></i>:
                                     <a style="color: darkblue;" href="mailto:rotaractcrce@gmail.com">rotaractcrce@gmail.com</a>
@@ -78,7 +83,7 @@
                 <div class="col-12">
                 <h2>Send us your Feedback</h2>
                 </div>
-                <div class="col-12 col-md-9">
+                <div class="col-12 offset-md-1 col-md-10">
                     <form>
                         <div class="form-group row" style="margin-top: 3%;">
                             <label for="firstname" class="col-md-2 col-form-label"> First Name</label>
@@ -121,8 +126,8 @@
                                     </label>                                
                                 </div>
                             </div>
-                            <div class="col-md-3 offset-md-1">
-                                <select class="form-control">
+                            <div class="col-md-2 offset-md-2">
+                                <select class="form-control" style="appearance: menulist;">
                                     <option>Email</option>
                                     <option>Call</option>
                                 </select>
@@ -182,6 +187,7 @@
                     </div>
                     <div class="col-12 col-sm-4 align-self-center">
                         <div class="text-center">
+                            Let's Connect:<br><br>
                             <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
                             <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
                                     class="fa fa-facebook"></i></a>
@@ -196,11 +202,13 @@
             <br>
             <div class="footer-bottom">
                 <div class="col-auto">
-                    <p>© Copyright <span style="color: maroon; font-weight:bold;">Rotaract Club of CRCE 2022-23</span>. designed by <span style="color: maroon; font-weight:bold;">Rtr. Jinish Varaiya</span></p>
+                    <p style="font-size:large;"> Developed By <span><a style="color: maroon; font-weight:bold; text-decoration: none;" href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span></p>
                 </div>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
