--- a/Gallery.html
+++ b/Gallery.html
@@ -12,31 +12,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="gallery-styles.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand mr-auto" href="#" style="margin-left: 3%;"><img src="./img/ppt logo.png" height="60" width="60"></a>
-        <div class="collapse navbar-collapse" id="Navbar">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
-            </ul>
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <audio id="audio" style="z-index: 0;">
+                <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
+            </audio>
+            <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav ms-auto" style="text-align: justify;">
+                    <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./report.html">Report</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     
     <div class="container">
-        <h2 style="margin: 5%;">Gallery 2022-23</h2>
+        <div class="col-12" style="padding: 30px 0px;">
+            <h2 style="margin: 5%;">Gallery 2022-23</h2>
+        </div>
     </div>
     <div class="container body-container">
         <div class="gallery-container w-3 h-2">
@@ -181,6 +188,7 @@
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
+                        Let's Connect:<br><br>
                         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/RCCRCE/"><i
                                 class="fa fa-facebook"></i></a>
@@ -195,13 +203,14 @@
         <br>
         <div class="footer-bottom">
             <div class="col-auto">
-                <p>© Copyright <span style="color: maroon; font-weight:bold;">Rotaract Club of CRCE 2022-23</span>. designed by <span style="color: maroon; font-weight:bold;">Rtr. Jinish Varaiya</span></p>
+                <p style="font-size:large;"> Developed By <span><a style="color: maroon; font-weight:bold; text-decoration: none;" href="https://www.linkedin.com/in/jinish-varaiya-19aba6168/">Rtr. Jinish Varaiya</a></span></p>
             </div>
         </div>
     </footer>
-    <script src="img/rtc with text3.png@5.2.0//js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
