--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Rotaract Club 2022-23</title>
 
-    <link rel="shortcut icon" href="./img/ppt logo2.png">
+    <link rel="shortcut icon" href="./img/ppt logo2.webp">
     <link href='https://fonts.googleapis.com/css?family=Amethysta' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Caesar+Dressing' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -17,15 +17,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container">
+            <a class="navbar-brand" href="#"><img src="img/ppt logo.webp" height="60" width="60"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <audio id="audio" style="z-index: 0;">
                 <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
             </audio>
-            <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
@@ -40,64 +40,33 @@
     </nav>
     <div class="q">
         <canvas id="canvas"></canvas>
-        <h1 class="home-head">Rotaract Club<br>2022-23</h1>
+        <p class="home-head">Rotaract Club<br>2022-23</p>
     </div>
 
     <div class="container">
-        <div style="margin-top: 16%;">
-            <h1><span style="color: rgb(0, 0, 0);" class="fire">K</span><span style="color: rgb(40, 0, 0);" class="burn">A</span><span style="color: rgb(65, 0, 0);" class="burn">I</span><span style="color: rgb(92, 0, 0);" class="fire">Z</span></span><span style="color: rgb(109, 0, 0);" class="fire">E</span></span><span style="color: rgb(128, 0, 0);" class="fire">N</span></h1>
-        </div>
-        <div class="row justify-content-center" style="margin-bottom: 5%;">
-            <div class="theme-col col-7" style="background-image: url(img/index/theme.webp); margin: 2%;">
-                <p style="font-weight: bold; font-size: large; justify-content: center;">
-                    The Rotaract Club of CRCE has been an integral part of Fr.CRCE. Our theme for the year 2022-2023<span style="text-align: center; padding-top: 1%; color: maroon; text-shadow: 2px 2px rgb(224, 192, 152);;">
-                    Kaizen</span> helped us hussle for the continuous improvement within us and do what we do best as Rotaractors.We work along the motto <span style="color: maroon;">Change For Better</span>.
-                </p>
+        <div class="theme offset-1 col-10" style="background-color: rgba(0, 0, 0, 0.952); margin-top: 10%; margin-bottom: 10%; padding-top: 5%; padding-bottom: 3%;">
+            <h1 style="margin-bottom: 15%; color: whitesmoke; font-family: OpenSans;">Theme Of The Year</h1>
+            <h1><span style="color: rgb(40, 0, 0);" class="fire">K</span><span style="color: rgb(60, 0, 0);" class="burn">A</span><span style="color: rgb(80, 0, 0);" class="burn">I</span><span style="color: rgb(92, 0, 0);" class="fire">Z</span></span><span style="color: rgb(102, 0, 0);" class="fire">E</span></span><span style="color: rgb(122, 0, 0);" class="fire">N</span></h1>
+            <div class="row justify-content-center" style="margin-bottom: 5%;">
+                <div class="col-9">
+                    <p style="font-weight: bold; font-size: large; justify-content: center; margin-top: 5%; color: whitesmoke;">
+                        The Rotaract Club of CRCE has been an integral part of Fr.CRCE. Our theme for the year 2022-2023<span style="text-align: center; padding-top: 1%; color: rgb(224, 192, 152); text-shadow: 3px 3px maroon;">
+                        Kaizen</span> helped us hussle to bring the change within us for the betterment of ourselves as the Rotaractors. We work along with the motto of <span style="color: rgb(224, 192, 152); text-shadow: 3px 3px maroon;">Continous Improvement</span>.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="col-12">
             <h2 class="about-div">About Us</h2>
             <div class="row row-content justify-content-center" style="border: none;">
                 <div class="row justify-content-center" style="margin-bottom: 5%;">
-                    <span class="about-span" style="background-image:url(img/index/about-us-bg1.jpg)"></span>
-                    <span class="about-span" style="background-image:url(img/index/about-us-bg2.jpg)"></span>
-                    <span class="about-span" style="background-image:url(img/index/about-us-bg3.jpg)"></span>
+                    <span class="about-span"><span style="color: red; font-size: 1.5em;">20+</span><br>Events Handled</span>
+                    <span class="about-span"><span style="color: orange; font-size: 1.5em;">200+</span><br>Firms Collab.</span>
+                    <span class="about-span"s><span style="color: purple; font-size: 1.5em;">2000+</span><br>People Visited</span>
                 </div>
-                <p class="col-10" style="font-size:large;">The purpose of Rotaract is to provide an opportunity for young men and woman to enhance the knowledge and skills that will assist them in personal development, to address the physical and social needs of their communities, and to promote better relationships between all people worldwide, through a framework of friendship and service..<a href="./AboutUs.html" style="font-weight: bold; color: gray; text-decoration: none;">Read More</a></p>
+                <p class="col-10" style="font-size:large;">The purpose of Rotaract is to provide an opportunity for young men and woman to enhance the knowledge and skills that will assist them in personal development, to address the physical and social needs of their communities, and to promote better relationships between all people worldwide, through a framework of friendship and service..<a href="./AboutUs.html" style="font-weight: bold; color: teal; text-decoration: none;">Read More</a></p>
             </div>
         </div>
-        <div class="row row-content justify-content-center">
-            <div class="col-12">
-                <h2>Events</h2>
-            </div>
-            <div class="col-10">
-                <div class="row" style="margin-top:5%; border-radius: 2rem; background-image: url(img/index/community-serv-bg.webp);">
-                    <img class="event-img col-12 col-sm-6" src="img/index/commuity service.webp" alt="" height="380px">
-                    <div class="events-col col-12 col-sm-6" style="text-align: center;">
-                        <div class="events row row-content" style="min-height: 300px;">
-                            <h4 style="color: rgb(210, 70, 0);"><u>Community Service</u></h4>
-                            <p style="font-size: large;">Rotaract clubs bring together people ages 18 and older to exchange ideas with leaders in the community, develop leadership and professional skills, and have fun through service.<br>Community Service is the opportunity Rotaract Club of Fr.CRCE have to implement club projects and activities that improve life in the local community.</p>
-                        </div>
-                        <button class="btn btn-success" onclick="window.location.href='./events.html'">See More</button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-10">
-                <div class="row" style="margin-top:5%; border-radius: 2rem; background-image: url(img/index/flagship-event-bg.webp)">
-                    <img class="event-img col-12 col-sm-6" src="img/index/flagship-event.webp" alt="" height="380px">
-                    <div class="events-col col-12 col-sm-6" style="text-align: center;">
-                        <div class="events row row-content" style="min-height: 300px;">
-                            <h4 style="color: rgb(210, 70, 0);"><u>Flagship Events</u></h4>
-                            <p style="font-size: large;">Every year Rotaract Club of FR.CRCE conducts some of their flagship events. These are included in the club service events of the Club. These events are the highlighted events of the Rotaract Club cause they are done with the intention to gather more number of masses, to increase the brotherhood amongst them and spread love in as much quantity as possible.</p>
-                        </div>
-                        <button class="btn btn-success" onclick="window.location.href='./events.html'">See More</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
 
         <div class="row row-content justify-content-center">
             <div class="col-12">
@@ -111,18 +80,18 @@
                             <div class="cards-wrapper justify-content-center">
                                 <div class="card">
                                     <div class="card-body">
-                                        <img src="img/index/coming-soon.webp" width="100%" height="200px">
+                                        <img src="img/index/Installation.webp" width="100%" height="200px">
                                         <dl class="row" style="padding-top: 4%;">
                                             <dt class="col-3 offset-1">Event</dt>
-                                            <dd class="col-7">Name</dd>
+                                            <dd class="col-7">Atraxia</dd>
                                             <dt class="col-3 offset-1">Date</dt>
-                                            <dd class="col-7">3 Feb 2013.</dd>
+                                            <dd class="col-7">29th August 2022.</dd>
                                             <dt class="col-3 offset-1">Details</dt>
-                                            <dd class="col-7">The details of the event will be uploaded soon once the event is announced to be conducted officially by the club members</dd>
+                                            <dd class="col-7">Installation Ceremony conducted to welcome incoming President Mathew Lobo and his team and bidding adieu to the Past President Sifra Biju.</dd>
                                         </dl>
                                         <div class="row justify-content-center">
-                                            <button class="col-10 col-sm-4 btn btn-primary">Register</button>
-                                        </div>
+                                            <button class="reg-btn1 col-10 col-sm-4 btn btn-primary"><span>Register</span></button>
+                                        </div><br>
                                     </div>
                                 </div>
                                 <div class="card">
@@ -195,6 +164,42 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content justify-content-center">
+            <div class="col-12">
+                <h2>Events</h2>
+            </div>
+            <div class="col-10">
+                <div class="row" style="margin-top:5%; background-image: url(img/index/community-service-bg.webp);">
+                    <img class="event-img col-12 col-lg-6" src="img/index/community service.webp" alt="">
+                    <div class="events-col col-12 col-lg-6" style="text-align: center;">
+                        <div class="events row row-content" style="min-height: 300px; color: white;">
+                            <h4><u>Community Service</u></h4>
+                            <p style="font-size: large;">Rotaract clubs bring together people ages 18 and older to exchange ideas with leaders in the community, develop leadership and professional skills, and have fun through service.Community Service is the opportunity Rotaract Club of Fr.CRCE have to implement club projects and activities that improve life in the local community.</p>
+                        </div>
+                        <button class="events-btn btn" onclick="window.location.href='./events.html#communityServiceEvents'">Learn More</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-10">
+                <div class="row" style="margin-top:5%; background-image: url(img/index/flagship-event-bg.webp)">
+                    <img class="event-img col-12 col-lg-6" src="img/index/flagship-event.webp" alt="">
+                    <div class="events-col col-12 col-lg-6" style="text-align: center;">
+                        <div class="events row row-content" style="min-height: 300px; color: whitesmoke;">
+                            <h4><u>Flagship Events</u></h4>
+                            <p style="font-size: large;">Every year Rotaract Club of FR.CRCE conducts some of their flagship events. These are included in the club service events of the Club. These events are the highlighted events of the Rotaract Club cause they are done with the intention to gather more number of masses, to increase the brotherhood amongst them and spread love in as much quantity as possible.</p>
+                        </div>
+                        <button class="events-btn btn" onclick="window.location.href='./events.html#flagshipEvents'">Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="gallery-pic" style="margin-top: 40px; margin-bottom: 80px; padding: 5%; text-align: center; background-color: black;">
+        <img src="img/gallery/2021-22/felcitation.webp" width="100%" alt="">
+        <button class="btn" onclick="window.location.href='./gallery.html'">View More</button>
     </div>
 
     <footer>
@@ -207,7 +212,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4 offset-1 col-sm-2">
+                <div class="col-3 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
@@ -218,18 +223,18 @@
                         <li><a href="./report.html">Report</a></li>
                     </ul>
                 </div>
-                <div class="col-7 col-sm-5">
+                <div class="col-8 col-sm-6 col-md-5">
                     <h5>Our Address</h5>
                     <address style="color: floralwhite;">
                         Fr. Agnel Ashram, Bandstand<br>
                         Bandra (W), Mumbai 400050.<br>
                         MH, IN<br>
-                        <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +91 9137835037/ +91 7798800444<br>
+                        <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
                         <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
                         <a href="mailto:rotaractcrce@gmail.com">rotaractcrce@gmail.com</a>
                     </address>
                 </div>
-                <div class="col-12 col-sm-4 align-self-center">
+                <div class="col-12 col-sm-3 col-md-4 align-self-center">
                     <div class="text-center">
                         Let's Connect:<br><br>
                         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
