--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Rotaract Club | Contact Us</title>
 
-        <link rel="shortcut icon" href="./img/ppt logo2.png">
+        <link rel="shortcut icon" href="./img/ppt logo2.webp">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,15 +19,13 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <audio id="audio" style="z-index: 0;">
-                    <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
-                </audio>
-                <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+                
+                <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
@@ -46,8 +44,8 @@
                 <div class="col-12">
                     <h2>Contact Us</h2>
                 </div>
-                <div class="row row-content">
-                    <div class="col-12 col-sm-6">
+                <div class="row row-content justify-content-center">
+                    <div class="col-12 col-lg-6">
                         <h4 style="text-align: center; font-weight: bold;"><img src="img/contactus/location.svg" alt=""> Find Us</h4>
                         <iframe
                             style="border: 2px black; width: 100%; height: 270px"
@@ -56,18 +54,18 @@
                             allowfullscreen
                         ></iframe>
                     </div>
-                    <div class="col-12 col-sm-6" >
-                        <div class="row justify-content-center">
-                            <div class="col-11 col-sm-6">
+                    <div class="col-12 col-lg-6" >
+                        <div class="row justify-content-center" style="padding: 40px 0px 0px 0px;">
+                            <div class="col-12 col-sm-6">
                                 <h4 style="font-weight: bold;">Our Address</h4>
-                                <address style="font-size: 100%;">
+                                <address style="font-size: 100%; margin-top: 7%; justify-self: center;">
                                     Fr. Agnel Ashram, Bandstand<br>
                                     Bandra (W), Mumbai 400050.<br>
                                     MH, IN.<br>
                                     <i class="fa fa-phone"></i>: +91 9137835037/ 7798800444<br>
                                     <i class="fa fa-envelope"></i>:
                                     <a style="color: darkblue;" href="mailto:rotaractcrce@gmail.com">rotaractcrce@gmail.com</a>
-                                </address>
+                                </address><br>
                                 <div class="btn-group" role="group">
                                     <a role="button" class="btn btn-primary" href="tel:+919137835037"><i class="fa fa-phone"></i> Call</a>
                                     <a role="button" class="btn btn-info" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> Insta.</a>
@@ -101,11 +99,11 @@
                         </div>
                         <div class="form-group row">
                             <label for="telnum" class="col-md-2 col-form-label"> Phone No.</label>
-                            <div class="col-3 col-md-2">
+                            <div class="col-3 col-md-2 col-xl-1">
                                 <input type="text" class="form-control" id="areacode" name="areacode"
-                                    placeholder="Area Code">
+                                    placeholder="Area Code" value="+91" readonly>
                             </div>
-                            <div class="col-9 col-md-8">
+                            <div class="col-9 col-md-8 col-xl-9">
                                 <input type="text" class="form-control" id="telnum" name="telnum"
                                     placeholder="Phone No.">
                             </div>
@@ -142,14 +140,12 @@
                         </div>
                         <div class="form-group row">
                             <div class="offset-md-2 col-md-10">
-                                <button type="submit" class="btn btn-primary">
+                                <button type="reset" class="btn btn-primary" >
                                     Send Feedback
                                 </button>
                             </div>
                         </div>
                     </form>
-                </div>
-                <div class="col-12 col-md">
                 </div>
             </div>
         </div>
@@ -163,7 +159,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 offset-1 col-sm-2">
+                    <div class="col-3 offset-1 col-sm-2">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="#">Home</a></li>
@@ -174,18 +170,18 @@
                             <li><a href="./report.html">Report</a></li>
                         </ul>
                     </div>
-                    <div class="col-7 col-sm-5">
+                    <div class="col-8 col-sm-6 col-md-5">
                         <h5>Our Address</h5>
                         <address style="color: floralwhite;">
                             Fr. Agnel Ashram, Bandstand<br>
                             Bandra (W), Mumbai 400050.<br>
                             MH, IN<br>
-                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +91 9137835037/ +91 7798800444<br>
+                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
                             <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
                             <a href="mailto:rotaractcrce@gmail.com">rotaractcrce@gmail.com</a>
                         </address>
                     </div>
-                    <div class="col-12 col-sm-4 align-self-center">
+                    <div class="col-12 col-sm-3 col-md-4 align-self-center">
                         <div class="text-center">
                             Let's Connect:<br><br>
                             <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
