--- a/Events.html
+++ b/Events.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>Rotaract Club | Events</title>
 
-        <link rel="shortcut icon" href="./img/ppt logo2.png">
+        <link rel="shortcut icon" href="./img/ppt logo2.webp">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,15 +14,13 @@
         <link rel="stylesheet" href="events.css">
     </head>
     <body>
-        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <audio id="audio" style="z-index: 0;">
-                    <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
-                </audio>
-                <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+                
+                <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
@@ -38,31 +36,30 @@
 
         <div class="container">
             <div class="row row-content" style="border: none;">
-                <div class="col-12">
+                <div id="communityServiceEvents" class="col-12">
                     <h2>Community Service Events</h2>
                 </div>
                 <div class="col">
                     <div id="mycarousel" class="carousel slide" data-ride="carousel" style="margin-top: 5%;">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <span style="padding: 1%; font-weight:bold; font-size: x-large; border-radius: 1rem; background-color: pink; color: black; opacity: 0.8;">Beach Clean Up</span>
                                 </div>
-                                <img class="col-10 offset-1 d-block img-fluid" src="img/events/events-community2.jpg">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="col-10 offset-1 d-block img-fluid" src="img/events/dog_event.webp" alt="uthappizza">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <span style="padding: 1%; font-weight:bold; font-size: x-large; border-radius: 1rem; background-color: pink; color: black; opacity: 0.8;">Paws For A Cause</span>
-                                </div>
+                                <img class="col-10 offset-1 d-block img-fluid" src="img/events/beach-cleanup.webp">
                             </div>
                             <div class="carousel-item">
                                 <img class="col-10 offset-1 d-block img-fluid" src="img/events/biggerthanlife.webp" alt="uthappizza">
-                                <div class="carousel-caption d-none d-md-block">
+                                <div class="carousel-caption d-block">
                                     <span style="padding: 1%; font-weight:bold; font-size: x-large; border-radius: 1rem; background-color: pink; color: black; opacity: 0.8;">Bigger Than Life</span>
                                 </div>
                             </div>
-
+                            <div class="carousel-item">
+                                <img class="col-10 offset-1 d-block img-fluid" src="img/events/dog_event.webp" alt="uthappizza">
+                                <div class="carousel-caption d-block">
+                                    <span style="padding: 1%; font-weight:bold; font-size: x-large; border-radius: 1rem; background-color: pink; color: black; opacity: 0.8;">Paws For A Cause</span>
+                                </div>
+                            </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#mycarousel" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
@@ -77,100 +74,109 @@
             </div>
 
             <div class="row row-content" style="border: none;">
-                <div class="col-10 offset-1" style="border-radius: 2rem; background-image: url(img/events/community-serv-bg2-1.png); color: floralwhite;">
+                <div class="col-12 col-md-10 offset-md-1" style="border-radius: 2rem; background-image: url(img/events/community-serv-bg2-1.webp); color: floralwhite;">
                     <h3 style="text-align: center;">
                         We Believe In Solving The Toughest Challenges
                     </h3>
                     <div class="row">
-                        <div class="col-4">
-                            <img src="img/events/plant_event.webp" class="com-img" height="250px" width="250px" style="margin-top: 60%; margin-left: 25%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center; margin-left: 40%;">Planted Trees</p>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div1">
+                            <img src="img/events/plant_event.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Planted Trees</p>
                         </div>
-                        <div class="col-4">
-                            <img src="img/events/kfdd.webp" class="com-img" height="250px" width="250px" style="margin-top: 25%; margin-left: 12.5%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center; margin-left: 10%;">Food Donation Kerala</p>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div2">
+                            <img src="img/events/kfdd.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Food Donation Kerala</p>
                         </div>
-                        <div class="col-4">
-                            <img src="img/events/beachc.webp" class="com-img" height="250px" width="250px" style="margin-top: 60%; margin-right: 25%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center;">Cleaned Beaches</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="img/events/rwp_event.webp" class="com-img" height="250px" width="250px" style="margin-top: 40%; margin-left: 25%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center; margin-left: 40%;">Red Wall Project</p>
-                        </div>
-                        <div class="col-4">
-                            <img src="img/events/bts_event.webp" class="com-img" height="250px" width="250px" style="margin-top: 0%; margin-left: 12.5%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center; margin-left: 10%;">Bresk The Stigma</p>
-                        </div>
-                        <div class="col-4">
-                            <img src="img/events/trans_event.webp" class="com-img" height="250px" width="250px" style="margin-top: 40%; margin-right: 25%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center;">Finding Your Identity</p>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div3">
+                            <img src="img/events/beachc.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Cleaned Beaches</p>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-4 offset-4">
-                            <img src="img/events/ouronlyhome.webp" class="com-img" height="250px" width="250px" style="margin-top: 0%; margin-left: 12.5%; border-radius: 50%;" alt="">
-                            <p style="font-weight: bold; font-size: medium; text-align: center; margin-left: 10%;">Our Only Home Earth</p>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div4">
+                            <img src="img/events/rwp_event.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Red Wall Project</p>
+                        </div>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div5">
+                            <img src="img/events/bts_event.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Bresk The Stigma</p>
+                        </div>
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div6">
+                            <img src="img/events/trans_event.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Finding Your Identity</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-md-4 col-xl-4 com-div com-div7 offset-md-4">
+                            <img src="img/events/ouronlyhome.webp" class="com-img" alt="">
+                            <br><br>
+                            <p>Our Only Home Earth</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row row-content">
-                <div class="col-12">
+            <div class="row row-content justify-content-center">
+                <div id="flagshipEvents" class="col-12">
                     <h2>Flagship Events</h2>
                 </div>
-                <div class="card-pos col-12 col-sm-4">
+                <div class="card-pos col-12 col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="img/events/hsr4_poster.webp" width="100%" height="100%">
-                                </div>
+                            <img src="img/events/hsr4_poster.webp" width="100%" height="100%">
+                            <div class="overlay">
+                                <p>Heart and Sole Run 2021<br><span style="text-shadow: none; font-weight: normal; color: gold;">13th-14th March</span></p>
+                                <p class="overlay-slide">#ChangingLives. Taking this into consideration, the Rotaract Club of Fr. CRCE organized the 'Heart & Sole Run 4' on 13th and 14th of March, 2021. It was a Pan India Virtual Marathon and was done to help and support a NGO - CORP.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-pos col-12 col-sm-4">
+                <div class="card-pos col-12 col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="img/events/footslog.webp" width="100%" height="100%">
-                                </div>
+                            <img src="img/events/footslog.webp" width="100%" height="100%">
+                            <div class="overlay">
+                                <p>Foot Slog 2022<br><span style="text-shadow: none; font-weight: normal; color: gold;">12th February</span></p>
+                                <p class="overlay-slide">On 12th February 2022 the Council Organized a trek amidst nature called ”FootSlog” to Kothaligad, Karjat. There were 200 trekkers who participated for Footslog. The trek was 8.2 km long and took around 6 hours to complete the trail.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-pos col-12 col-sm-4">
+                <div class="card-pos col-12 col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body">
-                            <div class="imagebox">
-                                <img src="img/events/micdrop.webp" width="100%" height="100%">
+                            <img src="img/events/micdrop.webp" width="100%" height="100%">
+                            <div class="overlay">
+                                <p>Micdrop Al-Fresco 2022<br> <span style="text-shadow: none; font-weight: normal; color: gold;">13th-14th March</span></p>
+                                <p class="overlay-slide">Besides engaging students with one another and fostering social bonds, it offered an opportunity for upcoming artists to showcase their works and for small businesses to market their products.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-pos col-12 offset-lg-2 col-sm-4">
+                <div class="card-pos col-12 col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="img/events/ar_event.webp" width="100%" height="100%">
-                                </div>
+                            <img src="img/events/ar_event.webp" width="100%" height="100%">
+                            <div class="overlay">
+                                <p>Amazing Race 2019<br><span style="text-shadow: none; font-weight: normal; color: gold;">30th August</span></p>
+                                <p class="overlay-slide">Every one of us has dreamed of becoming 'Sherlock Holmes' or Captain 'Jack Sparrow' at least once in our lives. Be it to find a treasure or solve a case or to unravel a mystery. Well, that opportunity was given to the students of Fr. CRCE College by the 'Rotaract Club Of Fr. CRCE'.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-pos col-12 col-sm-4">
+                <div class="card-pos col-12 col-md-6 col-xl-4">
                     <div class="card">
                         <div class="card-body">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="img/events/wyg_event.webp" width="100%" height="100%">
-                                </div>
+                            <img src="img/events/wyg_event.webp" width="100%" height="100%">
+                            <div class="overlay">
+                                <p>What's Your Genre 2021<br><span style="text-shadow: none; font-weight: normal; color: gold;">13th-14th March</span></p>
+                                <p class="overlay-slide">During the lockdown, everyone’s life became like a routine, with no source of entertainment or motivation. So we came up with What’s Your Genre - a professional development initiative where you can read, listen, binge, mix, mingle and socialize.</p>
                             </div>
                         </div>
                     </div>
@@ -187,7 +193,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 offset-1 col-sm-2">
+                    <div class="col-3 offset-1 col-sm-2">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="#">Home</a></li>
@@ -198,18 +204,18 @@
                             <li><a href="./report.html">Report</a></li>
                         </ul>
                     </div>
-                    <div class="col-7 col-sm-5">
+                    <div class="col-8 col-sm-6 col-md-5">
                         <h5>Our Address</h5>
                         <address style="color: floralwhite;">
                             Fr. Agnel Ashram, Bandstand<br>
                             Bandra (W), Mumbai 400050.<br>
                             MH, IN<br>
-                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +91 9137835037/ +91 7798800444<br>
+                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
                             <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
                             <a href="mailto:confusion@food.net">rotaractcrce@gmail.com</a>
                         </address>
                     </div>
-                    <div class="col-12 col-sm-4 align-self-center">
+                    <div class="col-12 col-sm-3 col-md-4 align-self-center">
                         <div class="text-center">
                             Let's Connect:<br><br>
                             <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
