--- a/Gallery.html
+++ b/Gallery.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Rotaract Club|</title>
+    <title>Rotaract Club | Gallery</title>
 
-    <link rel="shortcut icon" href="./img/ppt logo2.png">
+    <link rel="shortcut icon" href="./img/ppt logo2.webp">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,15 +18,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <audio id="audio" style="z-index: 0;">
-                <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
-            </audio>
-            <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+            
+            <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav ms-auto" style="text-align: justify;">
                     <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
@@ -42,7 +40,8 @@
     
     <div class="container">
         <div class="col-12" style="padding: 30px 0px;">
-            <h2 style="margin: 5%;">Gallery 2022-23</h2>
+            <h2 style="margin: 5%;">Gallery</h2>
+            <h1 style="font-family: Roboto; display: none;"><u>2021-22</u></h1>
         </div>
     </div>
     <div class="container body-container">
@@ -85,7 +84,7 @@
         <div class="gallery-container w-4 h-1">
             <div class="gallery-item">
                 <div class="image">
-                    <img src="img/beach cleanup.jpg" alt="beach-cleanup">
+                    <img src="img/gallery/2021-22/beach-cleanup.webp" alt="beach-cleanup">
                 </div>
                 <div class="text">Beach Cleanup</div>
             </div>
@@ -94,7 +93,7 @@
         <div class="gallery-container">
             <div class="gallery-item">
                 <div class="image">
-                    <img src="img/gallery/2021-22/beach-cleanup.webp" alt="beach-cleanup">
+                    <img src="img/gallery/2021-22/beach-cleanup1.webp" alt="beach-cleanup">
                 </div>
                 <div class="text">Beach Cleanup</div>
             </div>
@@ -164,7 +163,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4 offset-1 col-sm-2">
+                <div class="col-3 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
@@ -175,18 +174,18 @@
                         <li><a href="./report.html">Report</a></li>
                     </ul>
                 </div>
-                <div class="col-7 col-sm-5">
+                <div class="col-8 col-sm-6 col-md-5">
                     <h5>Our Address</h5>
                     <address style="color: floralwhite;">
                         Fr. Agnel Ashram, Bandstand<br>
                         Bandra (W), Mumbai 400050.<br>
                         MH, IN<br>
-                        <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +91 9137835037/ +91 7798800444<br>
+                        <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
                         <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
                         <a href="mailto:confusion@food.net">rotaractcrce@gmail.com</a>
                     </address>
                 </div>
-                <div class="col-12 col-sm-4 align-self-center">
+                <div class="col-12 col-sm-3 col-md-4 align-self-center">
                     <div class="text-center">
                         Let's Connect:<br><br>
                         <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
