--- a/Report.html
+++ b/Report.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
-        <title>Rotaract Club 2022-23</title>
+        <title>Rotaract Club | Report</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 offset-1 col-sm-2">
+                    <div class="col-3 offset-1 col-sm-2">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
                             <li><a href="./index.html">Home</a></li>
@@ -81,18 +81,18 @@
                             <li><a href="#">Report</a></li>
                         </ul>
                     </div>
-                    <div class="col-7 col-sm-5">
+                    <div class="col-8 col-sm-6 col-md-5">
                         <h5>Our Address</h5>
                         <address style="color: floralwhite;">
                             Fr. Agnel Ashram, Bandstand<br>
                             Bandra (W), Mumbai 400050.<br>
                             MH, IN<br>
-                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +91 9137835037/ +91 7798800444<br>
+                            <i style="color: pink;" class="fa fa-phone fa-lg"></i>: +919137835037/ +917798800444<br>
                             <i style="color: pink;" class="fa fa-envelope fa-lg"></i>:
                             <a href="mailto:confusion@food.net">rotaractcrce@gmail.com</a>
                         </address>
                     </div>
-                    <div class="col-12 col-sm-4 align-self-center">
+                    <div class="col-12 col-sm-3 col-md-4 align-self-center">
                         <div class="text-center">
                             Let's Connect:<br><br>
                             <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i></a>
