Revised Final Edition2.0
Header animation changes, and styling changes of some button on contact us

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -68,8 +68,8 @@
                                 </address><br>
                                 <div class="btn-group" role="group">
                                     <a role="button" class="btn btn-primary" href="tel:+919137835037"><i class="fa fa-phone"></i> Call</a>
-                                    <a role="button" class="btn btn-info" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> Insta.</a>
-                                    <a role="button" class="btn btn-success" href="mailto:rotaractcrce@gmail.com"><i class="fa fa-envelope-o"></i> Email</a>
+                                    <a role="button" class="btn" style="background-color: rgb(255, 1, 255); color: white; border: none;" href="https://www.instagram.com/rotaract_crce/?hl=en"><i class="fa fa-instagram"></i> Insta.</a>
+                                    <a role="button" class="btn btn-warning" style="color: white;" href="mailto:rotaractcrce@gmail.com"><i class="fa fa-envelope-o"></i> Email</a>
                                 </div>
                             </div>
                         </div>        
@@ -79,22 +79,15 @@
 
             <div class="row row-content">
                 <div class="col-12">
-                <h2>Send us your Feedback</h2>
+                    <h2>Send us your Feedback</h2>
                 </div>
                 <div class="col-12 offset-md-1 col-md-10">
                     <form>
                         <div class="form-group row" style="margin-top: 3%;">
-                            <label for="firstname" class="col-md-2 col-form-label"> First Name</label>
+                            <label for="name" class="col-md-2 col-form-label">Name</label>
                             <div class="col-md-10">
-                                <input type="text" class="form-control" id="firstname" name="firstname"
-                                    placeholder="Firstname">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="lastname" class="col-md-2 col-form-label"> Last Name</label>
-                            <div class="col-md-10">
-                                <input type="text" class="form-control" id="lastname" name="lastname"
-                                    placeholder="Lastname">
+                                <input type="text" class="form-control" id="name" name="name"
+                                    placeholder="Name">
                             </div>
                         </div>
                         <div class="form-group row">
@@ -154,8 +147,7 @@
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <h3 style="text-shadow: 2px 1px 1px  rgb(224, 192, 152); color: #800032;">Rotaract Club of CRCE</h3>
-                        <h4 style="text-shadow: 2px 1px 1px  rgb(224, 192, 152); color: #800032; text-align: center;">2022-23
-                            </h6>
+                        <h4 style="text-shadow: 2px 1px 1px  rgb(224, 192, 152); color: #800032; text-align: center;">2022-23</h4>
                     </div>
                 </div>
                 <div class="row">
