Event details and update & minor changes

--- a/Report.html
+++ b/Report.html
@@ -17,13 +17,10 @@
     <body>
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container">
+                <a class="navbar-brand" href="./index.html"><img src="./img/ppt logo.webp" height="60" width="60"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <audio id="audio" style="z-index: 0;">
-                    <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
-                </audio>
-                <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
