--- a/Gallery.html
+++ b/Gallery.html
@@ -20,11 +20,10 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container">
+            <a class="navbar-brand" href="./index.html"><img src="./img/ppt logo.webp" height="60" width="60"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
-            <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav ms-auto" style="text-align: justify;">
                     <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
