minor changes in header, contact us.
Header name changed from Rotaract Club 2022-23 to Rotaract Club CRCE. Inputs in the feedback form made compulsory.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div class="q">
         <canvas id="canvas"></canvas>
-        <p class="home-head">Rotaract Club<br>2022-23</p>
+        <p class="home-head">Rotaract Club<br>CRCE</p>
     </div>
 
     <div class="container">
