--- a/ContactUs.html
+++ b/ContactUs.html
@@ -86,25 +86,25 @@
                             <label for="name" class="col-md-2 col-form-label">Name</label>
                             <div class="col-md-10">
                                 <input type="text" class="form-control" id="name" name="name"
-                                    placeholder="Name">
+                                    placeholder="Name" required>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="telnum" class="col-md-2 col-form-label"> Phone No.</label>
                             <div class="col-3 col-md-2 col-xl-1">
                                 <input type="text" class="form-control" id="areacode" name="areacode"
-                                    placeholder="Area Code" value="+91" readonly>
+                                    placeholder="Area Code" value="+91" readonly> 
                             </div>
                             <div class="col-9 col-md-8 col-xl-9">
                                 <input type="text" class="form-control" id="telnum" name="telnum"
-                                    placeholder="Phone No.">
+                                    placeholder="Phone No." required>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="email" class="col-md-2 col-form-label"> Email Address</label>
                             <div class="col-md-10">
                                 <input type="text" class="form-control" id="email" name="email"
-                                placeholder="Email Address">
+                                placeholder="Email Address" required>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -127,7 +127,7 @@
                             <label for="feedback" class="col-md-2 col-form-label"> Your Feedback</label>
                             <div class="col-md-10">
                                 <textarea class="form-control" id="feedback" name="feedback"
-                                rows="12"></textarea>
+                                rows="12" required></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
