--- a/AboutUs.html
+++ b/AboutUs.html
@@ -298,7 +298,7 @@
                                     <a class="btn btn-social-icon btn-linkedin" style="text-shadow: 1px 1px 2px blue; color: blue;" href="https://www.linkedin.com/in/harshil-sansi-85a212227"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
-                            <h3 class="team-names" style="text-align: center;">Rtr. Harshil Saini</h3>
+                            <h3 class="team-names" style="text-align: center;">Rtr. Harshil Sansi</h3>
                             <p class="team-post">International Service Director</p>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                                 <div class="team-social">
                                     <a class="btn btn-social-icon btn-facebook" style="text-shadow: 1px 1px 2px darkblue; color: darkblue;" href="https://www.facebook.com/profile.php?id=100009516604040"><i class="fa fa-facebook"></i></a>
                                     <a class="btn btn-social-icon btn-instagram" style="text-shadow: 1px 1px 2px darkmagenta; color: darkmagenta;" href="https://instagram.com/aadigavankar1?igshid=YmMyMTA2M2Y="><i class="fa fa-instagram"></i></a>
-                                    <a class="btn btn-social-icon btn-linkedin" style="text-shadow: 1px 1px 2px blue; color: blue; display: none;" href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a class="btn btn-social-icon btn-linkedin" style="text-shadow: 1px 1px 2px blue; color: blue;" href="https://www.linkedin.com/in/aadi-gavankar-b21055252"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
                             <h3 class="team-names" style="text-align: center;">Rtr. Aadi Gavankar</h3>
