--- a/Events.html
+++ b/Events.html
@@ -35,6 +35,18 @@
 
         <div class="container">
             <div class="row row-content" style="border: none;">
+                <div id="latestEvent" class="col-12">
+                    <h2>Latest Event</h2>
+                    <div class="container" style="text-align: center;">
+                        <div class="col-12 jumbotron" style="position:relative; margin-top: 5%;">
+                            <img src="img/events/beachcleanup.webp" alt="">
+                        </div>
+                        <button class="btn reg-event" onclick="window.location.href='https://forms.gle/XnxoVGUWqqL8eHbh9'">Register</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row row-content" style="border: none;">
                 <div id="communityServiceEvents" class="col-12">
                     <h2>Community Service Events</h2>
                 </div>
