--- a/ContactUs.html
+++ b/ContactUs.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="form-group row">
                             <div class="offset-md-2 col-md-10">
-                                <button type="reset" class="btn btn-primary" >
+                                <button type="submit" class="btn btn-primary" >
                                     Send Feedback
                                 </button>
                             </div>
