--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
                                     </dl>
                                     <div class="row justify-content-center">
                                         <button
-                                            class="reg-btn reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
+                                            class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="card">
                                 <div class="card-body">
                                     <img src="img/index/footslog.webp" width="100%" height="200px">
@@ -132,8 +132,27 @@
                                             and the location for this year is <i>Irshalgadh</i>. Come! Be a part of this exciting venture.</dd>
                                     </dl>
                                     <div class="row justify-content-center">
-                                        <button class="reg-btn reg-btn1 btn col-6 col-sm-4"
-                                            onclick="location.href='https://forms.gle/mEnyMtSRJGcCYYqr5'"><span>Register</span></button>
+                                        <button class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item active">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img src="img/index/beachcleanup.webp" width="100%" height="200px">
+                                    <dl class="row" style="padding-top: 4%;">
+                                        <dt class="col-3 offset-1">Event</dt>
+                                        <dd class="col-7">Beach Clean Up</dd>
+                                        <dt class="col-3 offset-1">Date</dt>
+                                        <dd class="col-7">09th October 2022</dd>
+                                        <dt class="col-3 offset-1">Details</dt>
+                                        <dd class="col-8 col-xl-7">Beach Clean Up event is an initiative by us to keep our environment clean. So "&#10024; Leave nothing on the beach but footprints &#10024;"</dd>
+                                    </dl>
+                                    <div class="row justify-content-center">
+                                        <button
+                                            class="reg-btn2 btn col-6 col-sm-4" onclick="window.location.href='https://forms.gle/XnxoVGUWqqL8eHbh9'"><span>Register</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -155,29 +174,7 @@
                                     </dl>
                                     <div class="row justify-content-center">
                                         <button
-                                            class="reg-btn reg-btn3 btn col-6 col-sm-4"><span>Register</span></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src="img/index/coming-soon.webp" width="100%" height="200px">
-                                    <dl class="row" style="padding-top: 4%;">
-                                        <dt class="col-3 offset-1">Event</dt>
-                                        <dd class="col-7">Name</dd>
-                                        <dt class="col-3 offset-1">Date</dt>
-                                        <dd class="col-7">To be announced</dd>
-                                        <dt class="col-3 offset-1">Details</dt>
-                                        <dd class="col-8 col-xl-7">The details of the event will be uploaded soon once
-                                            the
-                                            event is announced to be conducted officially by the club members</dd>
-                                    </dl>
-                                    <div class="row justify-content-center">
-                                        <button
-                                            class="reg-btn reg-btn3 btn col-6 col-sm-4"><span>Register</span></button>
+                                            class="reg-btn3 btn col-6 col-sm-4"><span>Register</span></button>
                                     </div>
                                 </div>
                             </div>
