New Event Update
Startup Seminar Update

--- a/Events.html
+++ b/Events.html
@@ -41,7 +41,7 @@
                         <div class="col-12 jumbotron" style="position:relative; margin-top: 5%;">
                             <img src="img/events/beachcleanup.webp" alt="">
                         </div>
-                        <button class="btn reg-event" onclick="window.location.href='https://forms.gle/XnxoVGUWqqL8eHbh9'">Register</button>
+                        <button class="btn reg-event">Register</button>
                     </div>
                 </div>
             </div>
