--- a/index.html
+++ b/index.html
@@ -152,7 +152,27 @@
                                     </dl>
                                     <div class="row justify-content-center">
                                         <button
-                                            class="reg-btn2 btn col-6 col-sm-4" onclick="window.location.href='https://forms.gle/XnxoVGUWqqL8eHbh9'"><span>Register</span></button>
+                                            class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="card">
+                                <div class="card-body">
+                                    <img src="img/index/start-up seminar.webp" width="100%" height="200px">
+                                    <dl class="row" style="padding-top: 4%;">
+                                        <dt class="col-3 offset-1">Event</dt>
+                                        <dd class="col-7">Start-up Seminar</dd>
+                                        <dt class="col-3 offset-1">Date</dt>
+                                        <dd class="col-7">12th October 2022</dd>
+                                        <dt class="col-3 offset-1">Details</dt>
+                                        <dd class="col-8 col-xl-7">Seminar conducted on Business plan and Startup Life cycle with speakers: Mr.Mohammed Ahmed, Mr.Rahil Dhami.</dd>
+                                    </dl>
+                                    <div class="row justify-content-center">
+                                        <button
+                                            class="reg-btn1 btn col-6 col-sm-4"><span>Register</span></button>
                                     </div>
                                 </div>
                             </div>
